tests/qd/errors/error_basic_success.qd
fn safe_operation(a:i -- result:i)! {
	dup 0 > if {
		dup mul
	} else {
		"Error occurred" 1 error
	}
}

fn main() {
	5 safe_operation if {
		"Success: result is " . . nl
	} else {
		drop "Error occurred" . nl
	}
}
